#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package XtcInput
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-02
2012-06-19 Andy Salnikov
- XtcFileName gets a constructor which takes experiemnt id, run number,
  stream and chunk numbers
- added also unit tests for the above constructor
- XtcDgIterator::next allocates minimum necessary space for datagram,
  not maximum allowed size

Tag: V00-02-01
2012-03-05 Andy Salnikov
- adding XtcFilter classes to filter datagram contents, right now only
  one filtering option exists (XtcFilterTypeId class) based on TypeId

Tag: V00-02-00
2012-01-27 Andy Salnikov
- improved handling of out-of-order transitions

Tag: V00-01-02
2011-04-01 Andy Salnikov
- change logging level for few messages

Tag: V00-01-01
2011-03-31 Andy Salnikov
- XtcStreamMerger::next - last change introduced a bug, fixed now
- XtcIterator.cpp: trying to find a workaround for some weird cases 
  with CsPad::ElementV2 reading when nested XTC object indicated larger
  data size than its containing XTC container.

Tag: V00-01-00
2011-03-29 Andy Salnikov
- add support for extracting run number from datagrams stored in a queue
- Dgram is now a class instead of namespace, instances contain pointer 
  to Pds::Dgram and XtcFileName.
- XtcStreamMerge::next() returns Dgram object
- DgramQueue class stores Dgram objects

Tag: V00-00-05
2011-03-20 Andy Salnikov
- fix compilation issue after merge with V00-00-03

Tag: V00-00-04
2011-03-20 Andy Salnikov
- added smart pointer typedef for datagram class and couple of utility
  methods to manage datagram memory.
- changed all users of datagram class to use smart pointer class instead
  of bare pointer

Tag: V00-00-03
2011-02-16 Andy Salnikov