@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-00
+2012-06-20 Andy Salnikov
+- updated XtcDgIterator to use unbuffered IO, first step to support
+  reading live data
+
 Tag: V00-02-02
 2012-06-19 Andy Salnikov
 - XtcFileName gets a constructor which takes experiemnt id, run number,
